--- a/style2.css
+++ b/style2.css
@@ -33,7 +33,7 @@ nav{
     margin-bottom: 1%;
 }
 .background-container{
-    background: url('Ardent.jpg');
+    background: url('assest/Ardent.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
@@ -194,7 +194,7 @@ h1{
     margin-top: 10%;
     position: relative;
     height: 50vh;
-    background: url("Ardent5.jpg");
+    background: url("assest/Ardent5.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     padding-top: 14%;
@@ -1247,7 +1247,7 @@ nav{
     margin-bottom: 1%;
 }
 .background-container{
-    background: url('Ardent.jpg');
+    background: url('assest/Ardent.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
@@ -1605,7 +1605,7 @@ nav{
     margin-bottom: 1%;
 }
 .background-container{
-    background: url('Ardent.jpg');
+    background: url('assest/Ardent.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
@@ -2007,7 +2007,7 @@ button{
   margin-top: 10%;
   position: relative;
   height: 50vh;
-  background: url("Ardent5.jpg");
+  background: url("assest/Ardent5.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 13%;
@@ -2124,7 +2124,7 @@ nav{
     margin-bottom: 1%;
 }
 .background-container{
-    background: url('Ardent.jpg');
+    background: url('assest/Ardent.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
@@ -2553,7 +2553,7 @@ input{
   margin-top: 10%;
   position: relative;
   height: 50vh;
-  background: url("Ardent5.jpg");
+  background: url("assest/Ardent5.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 13%;
@@ -3160,7 +3160,7 @@ button{
     display: none;
   }
   .background-container{
-    background: url('Ardent.jpg');
+    background: url('assest/Ardent.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 105vh;
@@ -3315,7 +3315,7 @@ button{
   margin-top: 10%;
   position: relative;
   height: 50vh;
-  background: url("Ardent5.jpg");
+  background: url("assest/Ardent5.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 14%;
@@ -3679,7 +3679,7 @@ button{
       text-transform: uppercase;
   }
   .background-container{
-    background: url('Ardent.jpg');
+    background: url('assest/Ardent.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 95vh;
@@ -3826,7 +3826,7 @@ button{
     margin-top: 10%;
     position: relative;
     height: 50vh;
-    background: url("Ardent5.jpg");
+    background: url("assest/Ardent5.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     padding-top: 28%;
@@ -4208,7 +4208,7 @@ button{
       text-transform: uppercase;
   }
   .background-container{
-    background: url('Ardent.jpg');
+    background: url('assest/Ardent.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 95vh;
@@ -4243,10 +4243,10 @@ button{
     width: 11vw;
     margin-left: 45%;
     margin-top: 2%;
-    padding-left: 8px;
-    padding-top: 5px;
+    padding-left: 5px;
+    padding-top: 3px;
   
-    height: 7vh;
+    height: 10vh;
     
   }
   #about{
@@ -4355,7 +4355,7 @@ button{
     margin-top: 10%;
     position: relative;
     height: 50vh;
-    background: url("Ardent5.jpg");
+    background: url("assest/Ardent5.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     padding-top: 28%;
@@ -4738,7 +4738,7 @@ button{
     text-transform: uppercase;
 }
 .background-container{
-  background: url('Ardent.jpg');
+  background: url('assest/Ardent.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   height: 95vh;
@@ -4885,7 +4885,7 @@ button{
   margin-top: 10%;
   position: relative;
   height: 50vh;
-  background: url("Ardent5.jpg");
+  background: url("assest/Ardent5.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 22%;
@@ -5092,7 +5092,7 @@ display: none;
 
 .progress{
   width: 70%;
-  margin-top: 23%;
+  margin-top: 35%;
   margin-left: -10%;
 }
 .graphics{
@@ -5102,7 +5102,7 @@ display: none;
 
 }
 #ourteam{
-  margin-top: 60%;
+  margin-top: 30%;
 }
 .graphico{
   margin-left: -101%;
@@ -5124,7 +5124,7 @@ display: none;
 .circleteam{
   border-radius: 50%;
   background-color: #ccc;
-  width: 43%;
+  width: 42%;
   height: 18vh;
   margin-top: 5%;
 }
@@ -5137,7 +5137,7 @@ display: none;
 }
 .teamcon1{
   margin-top: 6%;
-  margin-left: 2%;
+  margin-left: 4%;
 }
 .teampara{
   text-align: center;
@@ -5247,5 +5247,638 @@ button{
 .portfolio-text{
   text-align: center;
   margin-top: 15%;
+}
+}
+@media only screen and (max-width: 360px) {
+  .header-logo{
+    padding-top: 5%;
+  }
+  .body-text2{
+    text-align: center;
+    border: 3px solid rgba(106, 106, 106,.3);
+    width: 80%;
+    height: 40vh;
+    margin-left: 10%;
+    padding-top: 23%;
+    
+    -webkit-animation:  bounce-in-top 3.5s both;
+    animation:  bounce-in-top 3.5s both;
+    margin-top: 30%;
+    text-transform: uppercase;
+}
+.circle{
+  border-radius: 50%;
+  background-color: #edb218;
+  width: 13vw;
+  margin-left: 45%;
+  margin-top: 2%;
+  padding-left: 10px;
+  padding-top: 10px;
+
+  height: 6vh;
+  
+}
+.banner{
+  margin-top: 10%;
+  position: relative;
+  height: 30vh;
+  background: url("assest/Ardent5.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: 20%;
+  width: 100%;
+  
+}
+.first-con{
+  width: 80%;
+  margin-left: 10%;
+  height: 45vh;
+}
+.circle-con{
+  background-color: #edb218;
+  color: #fff;
+  border-radius: 50%;
+  width: 24vw;
+  height: 12vh;
+  margin-left: 34%;
+  padding-top: 8%;
+  /* margin-top: 30px; */
+
+
+}
+hr{
+display: none;
+}
+.second-con{
+  width: 80%;
+  margin-left: 10%;
+  height: 45vh;
+
+}
+.circle2-con{
+  /* background-color: #edb218; */
+  color: #fff;
+  border-radius: 50%;
+  width: 24vw;
+  height: 12vh;
+  margin-left: 34%;
+  padding-top: 8%;
+  /* margin-top: 30px; */
+}
+.Third-con{
+  width: 80%;
+  margin-left: 10%;
+  height: 45vh;
+}
+.br-img{
+  width:100%;
+  max-width:150px; 
+  margin-left: 25%;
+}
+#all{
+  margin-top: 3%;
+  padding-top: 3%;
+  display: grid;
+  margin-left: -5%;
+  grid-template-columns: repeat(2, 1fr); /* 2 columns with equal width */
+  grid-template-rows: repeat(2, 1fr);    /* 2 rows with equal height */
+  gap: 35px; /* Optional: Adds space between grid items */
+  width: 100%; /* Adjust as needed */
+  height: 300px; /* Adjust the height */
+}
+.br-img2{
+  width:100%;
+  max-width:150px; 
+  height: 42vh;
+   max-height: 150px; 
+  margin-left: 3%;
+}
+.br-img3{
+  width:100%;
+  max-width:150px; 
+  margin-top: -13%;
+  height: 42vh;
+  max-height: 150px; 
+  margin-left: 24%;
+}
+.br-img4{
+  width:100%;
+  max-width:150px; 
+  height: 42vh;
+  margin-top: -13%;
+  max-height: 150px; 
+  
+}
+.progress{
+  margin-top: 30%;
+}
+.emailtext{
+  margin-left: 3%;
+  margin-top: -7%;
+
+}
+.email{
+  margin-left: 3%;
+  margin-top: -7%;
+}
+.Email{
+  margin-left: 5%;
+  width: 80%;
+  margin-top: 10px;
+  display: flex;
+  height: 10vh;
+  border-radius: 10px;
+  padding-top: 23px;
+  background-color: #fff;
+  padding-left: 20px;
+}
+.phonenumber{
+  margin-left: 5%;
+  width: 80%;
+  display: flex;
+  height: 10vh;
+  border-radius: 10px;
+  padding-top: 10px;
+  background-color: #fff;
+  padding-left: 20px;
+}
+.callicon{
+  border-radius: 50%;
+  width: 17%;
+  height: 7vh;
+  background-color: #edb218;
+}
+.circleteam{
+  border-radius: 50%;
+  background-color: #ccc;
+  width: 43%;
+  height: 10vh;
+  margin-top: 5%;
+}
+}
+@media only screen and (max-width:412px) {
+  .header-logo{
+    padding-top: 5%;
+  }
+  .body-text2{
+    text-align: center;
+    border: 3px solid rgba(106, 106, 106,.3);
+    width: 80%;
+    height: 40vh;
+    margin-left: 10%;
+    padding-top: 23%;
+    
+    -webkit-animation:  bounce-in-top 3.5s both;
+    animation:  bounce-in-top 3.5s both;
+    margin-top: 30%;
+    text-transform: uppercase;
+}
+.circle{
+  border-radius: 50%;
+  background-color: #edb218;
+  width: 13vw;
+  margin-left: 45%;
+  margin-top: 2%;
+  padding-left: 14px;
+  padding-top: 14px;
+
+  height: 6vh;
+  
+}
+.banner{
+  margin-top: 10%;
+  position: relative;
+  height: 30vh;
+  background: url("assest/Ardent5.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: 20%;
+  width: 100%;
+  
+}
+.first-con{
+  width: 80%;
+  margin-left: 10%;
+  height: 40vh;
+}
+.circle-con{
+  background-color: #edb218;
+  color: #fff;
+  border-radius: 50%;
+  width: 24vw;
+  height: 11vh;
+  margin-left: 34%;
+  padding-top: 8%;
+  /* margin-top: 30px; */
+
+
+}
+hr{
+display: none;
+}
+.second-con{
+  width: 80%;
+  margin-left: 10%;
+  height: 40vh;
+
+}
+.circle2-con{
+  /* background-color: #edb218; */
+  color: #fff;
+  border-radius: 50%;
+  width: 24vw;
+  height: 11vh;
+  margin-left: 34%;
+  padding-top: 8%;
+  /* margin-top: 30px; */
+}
+.Third-con{
+  width: 80%;
+  margin-left: 10%;
+  height: 40vh;
+}
+.br-img{
+  width:100%;
+  max-width:150px; 
+  margin-left: 25%;
+}
+#all{
+  margin-top: 3%;
+  padding-top: 3%;
+  display: grid;
+  margin-left: -3%;
+  grid-template-columns: repeat(2, 1fr); /* 2 columns with equal width */
+  grid-template-rows: repeat(2, 1fr);    /* 2 rows with equal height */
+  gap: 35px; /* Optional: Adds space between grid items */
+  width: 100%; /* Adjust as needed */
+  height: 300px; /* Adjust the height */
+}
+.br-img2{
+  width:100%;
+  max-width:150px; 
+  height: 42vh;
+   max-height: 150px; 
+  margin-left: 3%;
+}
+.br-img3{
+  width:100%;
+  max-width:150px; 
+  margin-top: -13%;
+  height: 42vh;
+  max-height: 150px; 
+  margin-left: 24%;
+}
+.br-img4{
+  width:100%;
+  max-width:150px; 
+  height: 42vh;
+  margin-top: -13%;
+  max-height: 150px; 
+  
+}
+.progress{
+  margin-top: 45%;
+}
+.skill{
+  padding-top: 14%;
+}
+.emailtext{
+  margin-left: 3%;
+  margin-top: -7%;
+
+}
+.email{
+  margin-left: 3%;
+  margin-top: -7%;
+}
+.Email{
+  margin-left: 5%;
+  width: 80%;
+  margin-top: 10px;
+  display: flex;
+  height: 10vh;
+  border-radius: 10px;
+  padding-top: 23px;
+  background-color: #fff;
+  padding-left: 20px;
+}
+.phonenumber{
+  margin-left: 5%;
+  width: 80%;
+  display: flex;
+  height: 10vh;
+  border-radius: 10px;
+  padding-top: 10px;
+  background-color: #fff;
+  padding-left: 20px;
+}
+.callicon{
+  border-radius: 50%;
+  width: 17%;
+  height: 6vh;
+  background-color: #edb218;
+}
+.circleteam{
+  border-radius: 50%;
+  background-color: #ccc;
+  width: 43%;
+  height: 10vh;
+  margin-top: 5%;
+}
+svg{
+  width: 50%;
+  margin-left: 14px;
+  margin-top: 8px;
+}
+#formcontact{
+  background-color: #fff;
+  height: 43vh;
+  width: 90%;
+  margin-left: 1%;
+  margin-top: 12%;
+}
+}
+@media only screen and (max-width:430px) {
+  .header-logo{
+    padding-top: 5%;
+  }
+  .body-text2{
+    text-align: center;
+    border: 3px solid rgba(106, 106, 106,.3);
+    width: 80%;
+    height: 40vh;
+    margin-left: 10%;
+    padding-top: 23%;
+    
+    -webkit-animation:  bounce-in-top 3.5s both;
+    animation:  bounce-in-top 3.5s both;
+    margin-top: 30%;
+    text-transform: uppercase;
+}
+.random{
+  display: none;
+}
+.circle{
+  border-radius: 50%;
+  background-color: #edb218;
+  width: 13vw;
+  margin-left: 45%;
+  margin-top: 2%;
+  padding-left: 15px;
+  padding-top: 14px;
+
+  height: 6vh;
+  
+}
+.small-text{
+  background-color: black;
+  width: 45vw;
+  height: 4vh;
+  margin-left: 22%;
+  padding-top: 3px;
+}
+.banner{
+  margin-top: 10%;
+  position: relative;
+  height: 30vh;
+  background: url("assest/Ardent5.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: 20%;
+  width: 100%;
+  
+}
+.first-con{
+  width: 80%;
+  margin-left: 10%;
+  height: 40vh;
+}
+.circle-con{
+  background-color: #edb218;
+  color: #fff;
+  border-radius: 50%;
+  width: 24vw;
+  height: 11vh;
+  margin-left: 34%;
+  padding-top: 8%;
+  /* margin-top: 30px; */
+
+
+}
+hr{
+display: none;
+}
+.second-con{
+  width: 80%;
+  margin-left: 10%;
+  height: 40vh;
+
+}
+.circle2-con{
+  /* background-color: #edb218; */
+  color: #fff;
+  border-radius: 50%;
+  width: 24vw;
+  height: 11vh;
+  margin-left: 34%;
+  padding-top: 8%;
+  /* margin-top: 30px; */
+}
+.Third-con{
+  width: 80%;
+  margin-left: 10%;
+  height: 40vh;
+}
+.br-img{
+  width:100%;
+  max-width:150px; 
+  margin-left: 25%;
+}
+#all{
+  margin-top: 3%;
+  padding-top: 3%;
+  display: grid;
+  margin-left: -3%;
+  grid-template-columns: repeat(2, 1fr); /* 2 columns with equal width */
+  grid-template-rows: repeat(2, 1fr);    /* 2 rows with equal height */
+  gap: 35px; /* Optional: Adds space between grid items */
+  width: 100%; /* Adjust as needed */
+  height: 300px; /* Adjust the height */
+}
+.br-img2{
+  width:100%;
+  max-width:150px; 
+  height: 42vh;
+   max-height: 150px; 
+  margin-left: 3%;
+}
+.br-img3{
+  width:100%;
+  max-width:150px; 
+  margin-top: -13%;
+  height: 42vh;
+  max-height: 150px; 
+  margin-left: 24%;
+}
+.br-img4{
+  width:100%;
+  max-width:150px; 
+  height: 42vh;
+  margin-top: -13%;
+  max-height: 150px; 
+  
+}
+.progress{
+  margin-top: 35%;
+}
+.skill{
+  padding-top: 14%;
+}
+.emailtext{
+  margin-left: 3%;
+  margin-top: -7%;
+
+}
+.email{
+  margin-left: 3%;
+  margin-top: -7%;
+}
+.Email{
+  margin-left: 5%;
+  width: 80%;
+  margin-top: 10px;
+  display: flex;
+  height: 10vh;
+  border-radius: 10px;
+  padding-top: 35px;
+  background-color: #fff;
+  padding-left: 20px;
+}
+.phonenumber{
+  margin-left: 5%;
+  width: 80%;
+  display: flex;
+  height: 10vh;
+  border-radius: 10px;
+  padding-top: 20px;
+  background-color: #fff;
+  padding-left: 20px;
+}
+.callicon{
+  border-radius: 50%;
+  width: 17%;
+  height: 6vh;
+  background-color: #edb218;
+}
+.circleteam{
+  border-radius: 50%;
+  background-color: #ccc;
+  width: 85%;
+  height: 13vh;
+  margin-top: 7%;
+}
+svg{
+  width: 50%;
+  margin-left: 14px;
+  margin-top: 8px;
+}
+#formcontact{
+  background-color: #fff;
+  height: 43vh;
+  width: 90%;
+  margin-left: 1%;
+  margin-top: 12%;
+}
+.digital{
+  margin-left: 28%;
+  font-size: 18px;
+  margin-top: -2.5%;
+}
+.section{
+  margin-top: 10%;
+}
+.section1{
+  /* margin-left: 20%; */
+  width: 100%;
+  /* text-align: center; */
+  
+}
+.text{
+  width: 90%;
+  /* margin-left: 20px; */
+  font-size: 13px;
+  margin-left: -7px;
+  /* margin-top: px; */
+  text-align: center;
+  color: rgb(127, 125, 125);
+
+
+}
+.web{
+  margin-left: -8%;
+}
+.graphico{
+  margin-left: -101%;
+}
+.brand-para{
+  width: 65vw;
+  margin-left: 27px;
+  margin-top: 5px;
+  color: rgb(113, 112, 112);
+}
+#skills{
+  margin-top: 20%;
+  background-color: #fff;
+  padding-left: 13%;
+  padding-top: 18px;
+  display: block;
+  width: 100%;
+  height: 32vh;
+}
+#ourteam{
+  margin-top: 60%;
+}
+.teamcon1{
+  margin-top: 6%;
+  margin-left: 2%;
+}
+.formcon{
+  padding-top: 4%;
+  padding-left: 4%;
+}
+#formcontact{
+  background-color: #fff;
+  height: 43vh;
+  width: 90%;
+  margin-left: 1%;
+  margin-top: 12%;
+}
+.inputbox1{
+  margin-top: 22px;
+}
+.inputbox2{
+  margin-top: 15px;
+}
+input{
+  width: 40vw;
+  /* border-radius: 5px; */
+  height: 6vh;
+  margin-left: 1px;
+}
+#msg{
+  margin-top: 12px;
+  height: 9vh;
+  width: 81vw;
+}
+button{
+  width: 35vw;
+  /* margin-left: 7px; */
+  text-align: center;
+  margin-top: 15px;
+  font-weight: bold;
+  height: 6vh;
+  background-color: #edb218;
+  color: #fff;
+  border: none;
 }
 }
