--- a/style2.css
+++ b/style2.css
@@ -4190,537 +4190,37 @@ button{
   }
 }
 @media only screen and (max-width: 375px) {
-  /* Styles for typical smartphones */
-      nav{
-      display: none;
-    }
-    .body-text2{
-      text-align: center;
-      border: 3px solid rgba(106, 106, 106,.3);
-      width: 70%;
-      height: 60vh;
-      margin-left: 14%;
-      padding-top: 27%;
-      
-      -webkit-animation:  bounce-in-top 3.5s both;
-      animation:  bounce-in-top 3.5s both;
-      margin-top: 16%;
-      text-transform: uppercase;
-  }
-  .background-container{
-    background: url('assest/Ardent.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 95vh;
-    width: 100%;
 
-
-
-}
-  .heading5{
-    font-size: 13px;
-  }
-  .heading3{
-    font-size: 20px;
-  }
-  .heading1{
-    font-size: 48px;
-  
-  }
-  .small-text{
-    background-color: black;
-    width: 45vw;
-    height: 5vh;
-    margin-left: 21%;
-    padding-top: -7px;
-  }
-  .small-text p{
-    font-size: 13px;
-  }
-  .circle{
-    border-radius: 50%;
-    background-color: #edb218;
-    width: 11vw;
-    margin-left: 45%;
-    margin-top: 2%;
-    padding-left: 5px;
-    padding-top: 3px;
-  
-    height: 10vh;
-    
-  }
-  #about{
-    margin-top: 10%;
-  }
-  .about{
-    text-align: center;
-    font-size: 16px;
-    margin-left: 5%;
-    color: #edb218;
-  
-  }
-  .about-text{
-    
-    /* font-weight: lighter; */
-    text-align: center;
-    margin-top: 18px;
-    width: 90%;
-    color: rgb(81, 78, 78);
-    
-    font-size: 12px;
-    margin-left: 20px;
-  }
-  .about-text1{
-    text-align: center;
-    color: #edb218;
-    font-weight: 900;
-  
-  }
-  #light{
-    color: rgb(144, 143, 143);
-    font-size: 45px;
-    margin-top: 2%;
-  }
-  .first{
-    display: block;
-    margin-left: 2%;
-    margin-top: 7%;
-  }
-  .digital{
-    margin-left: 25%;
-    font-size: 18px;
-    margin-top: -2.5%;
-  }
-  .section{
-    margin-top: 10%;
-  }
-  .section1{
-    /* margin-left: 20%; */
-    width: 100%;
-    /* text-align: center; */
-    
-  }
-  .text{
-    width: 90%;
-    /* margin-left: 20px; */
-    font-size: 13px;
-    margin-left: -7px;
-    /* margin-top: px; */
-    text-align: center;
-    color: rgb(127, 125, 125);
-  
-  
-  }
-  .section2{
-    /* margin-left: 43%; */
-    margin-top: 5%;
-  }
-  .text2{
-    margin-top: 8px;
-    text-align: center;
-    margin-left: -68%;
-    font-size: 14px;
-    width: 90vw;
-    color: rgb(127, 125, 125);
-  
-  }
-  .web{
-    margin-left: -13%;
-  }
-  .text3{
-    color: rgb(127, 125, 125);
-    margin-top: 8px;
-    width: 90vw;
-    text-align: center;
-    font-size: 13px;
-
-    margin-left: -200%;
-  
-  
-  
-  }
-  .section3{
-    margin-top: 5%;
-  
-    /* margin-left: 68%; */
-  
-  }
-  .graphics{
-    font-size: 18px;
-    margin-left: -82%;
-  
-  
-  }
-  .banner{
-    margin-top: 10%;
-    position: relative;
-    height: 50vh;
-    background: url("assest/Ardent5.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding-top: 28%;
-    width: 100%;
-    
-}
-  .text-ban{
-    color: #fff;
-    font-size: 25px;
-    /* font-weight: ; */
-    
-  -webkit-animation: text-focus-in 4s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-    animation: text-focus-in 4s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-    text-align: center;
-    
-  
-  }
-  #material-symbols-outlined{
-    color: #898989; 
-    font-size: 15px;
-  }
-  .text-para{
-    width: 85%;
-    color: rgb(226, 226, 226);
-    text-align: center;
-    font-size: 16px;
-    margin-top: 12px;
-    margin-left: 28px;
-  
-  }
-  .service-text2{
-    margin-top: 12px;
-    margin-left: 5%;
-    font-size: 14px;
-    color: rgb(81, 78, 78);
-    
-  
-    width: 90%;
-  }
-  .con{
-    display: block;
-    width: 100%;
-  }
-  .first-con{
-    width: 80%;
-    margin-left: 10%;
-    height: 55vh;
-  }
-  .brand-para{
-    width: 65vw;
-    margin-left: 22px;
-    margin-top: 5px;
-    color: rgb(113, 112, 112);
-  }
-  .circle-con{
-    background-color: #edb218;
-    color: #fff;
-    border-radius: 50%;
-    width: 20vw;
-    height: 13vh;
-    margin-left: 38%;
-    padding-top: 5%;
-    /* margin-top: 30px; */
-  
-  
-  }
-  hr{
-  display: none;
-  }
-  .second-con{
-    width: 80%;
-    margin-left: 10%;
-    height: 55vh;
-  
-  }
-  .circle2-con{
-    /* background-color: #edb218; */
-    color: #fff;
-    border-radius: 50%;
-    width: 20vw;
-    height: 13vh;
-    margin-left: 38%;
-    padding-top: 5%;
-    /* margin-top: 30px; */
-  }
-  .Third-con{
-    width: 80%;
-    margin-left: 10%;
-    height: 55vh;
-  }
-  .random{
-    margin-top: 6%;
-    background-color: #fff;
-    display: none;
-    gap: 1%;
-    padding-right: 1%;
-    height: 27vh;
-    width: 100%;
-    justify-content: space-evenly;
-    /* text-align: center; */
-    padding-top: 20%;
-    
-  }
-  .random2{
-    width: 85%;
-    display: flex;
-    overflow: hidden;
-    justify-content: space-evenly;
-    animation: slide-left 5s;
-  
-  
-  }
-  .num{
-    font-size: 16px;
-  }
-  .Happy{
-    margin-left: 75px;
-    margin-top: 30px;
-    text-transform: uppercase;
-    font-size: 12px;
-  }
-  .port-para{
-    width: 85vw;
-    font-size: 13px;
-    margin-left: 8%;
-    margin-top: 12px;
-  }
-  .ul{
-    display: flex;
-    text-decoration: none;
-    margin-top: 10%;
-    width: 50vw;
-    text-align: center;
-    margin-left: 15%;
-    gap: 15px;
-    justify-content: space-evenly;
-  }
-  .br-img{
-    width:100%;
-    max-width:120px; 
-    margin-left: 25%;
-  }
-  #all{
-    margin-top: 3%;
-    padding-top: 3%;
-    display: grid;
-    margin-left: 2%;
-    grid-template-columns: repeat(2, 1fr); /* 2 columns with equal width */
-    grid-template-rows: repeat(2, 1fr);    /* 2 rows with equal height */
-    gap: 5px; /* Optional: Adds space between grid items */
-    width: 100%; /* Adjust as needed */
-    height: 300px; /* Adjust the height */
-  }
-  .br-img2{
-    width:100%;
-    max-width:120px; 
-    height: 42vh;
-     max-height: 120px; 
-    margin-left: 3%;
-  }
-  .br-img3{
-    width:100%;
-    max-width:120px; 
-    margin-top: -6%;
-    height: 42vh;
-    max-height: 120px; 
-    margin-left: 24%;
-  }
-  .br-img4{
-    width:100%;
-    max-width:120px; 
-    height: 42vh;
-    margin-top: -6%;
-    max-height: 120px; 
-    
-  }
-  .port-text{
-    font-size: 20px;
-  }
-  #skills{
-    margin-top: 10%;
-    background-color: #fff;
-    padding-left: 13%;
-    padding-top: 18px;
-    display: block;
-    width: 100%;
-    height: 32vh;
-  }
-  .text-skill{
-    text-align: center;
-    width: 100%;
-    font-size: 16px;
-  }
-  .text-skills{
-    width: 100%;
-    padding-top: 2px;
-    text-align: center;
-    font-size: 10px;
-  }
-  .skill{
-    width: 100%;
-    margin-left: -8%;
-  }
-  
-  .progress{
-    width: 70%;
-    margin-top: 23%;
-    margin-left: -10%;
-  }
-  .graphics{
-    font-size: 13px;
-    margin-left: 1%;
-    /* width: 100%; */
-  
-  }
-  #ourteam{
-    margin-top: 60%;
-  }
-  .graphico{
-    margin-left: -101%;
-    font-size: 17px; 
-    text-transform: capitalize;
-  }
-  .teamconalm{
-    display: block;
-    margin-left: 6%;
-    /* padding-top: 5%; */
-  }
-  .ourteam{
-    font-size: 22px;
-  }
-  .Tname1{
-    font-weight: bolder;
-    margin-left: 1px;
-  }
-  .circleteam{
-    border-radius: 50%;
-    background-color: #ccc;
-    width: 50%;
-    height: 18vh;
-    margin-top: 5%;
-  }
-  .shortp{
-    width: 80%;
-    font-size: 10px;
-  }
-  .roles{
-    margin-left: 1px;
-  }
-  .teamcon1{
-    margin-top: 6%;
-    margin-left: 2%;
-  }
-  .teampara{
-    text-align: center;
-    font-size: 16px;
-  }
-  .teamSubhead{
-    text-align: center;
-    font-size: 23px;
-    margin-top: 6px;
-  }
-  .contactcon{
-    margin-left: 5%;
-    display: block;
-    margin-top: 3%;
-    width: 100%;
-  }
-  .phonenumber{
-    margin-left: 5%;
-    width: 80%;
-    display: flex;
-    height: 12vh;
-    border-radius: 10px;
-    padding-top: 10px;
-    background-color: #fff;
-    padding-left: 23px;
-  }
-  .callicon{
-    border-radius: 50%;
-    width: 17%;
-    height: 8vh;
-    background-color: #edb218;
-  }
-  .phonetxt{
-    margin-left: 6px;
-  }
-  svg{
-    width: 50%;
-    margin-left: 12px;
-    margin-top: 6px;
-  }
   .Email{
-    margin-left: 5%;
-    width: 80%;
+    margin-left: 1%;
+    width: 85%;
     margin-top: 10px;
     display: flex;
-    height: 12vh;
+    height: 10vh;
     border-radius: 10px;
-    padding-top: 23px;
+    padding-top: 30px;
     background-color: #fff;
     padding-left: 23px;
   }
-  
-  .formcon{
-    padding-top: 4%;
-    padding-left: 4%;
-  }
-  #formcontact{
-    background-color: #fff;
-    height: 54vh;
-    width: 90%;
+  .phonenumber{
     margin-left: 1%;
-    margin-top: 12%;
+    width: 85%;
+    display: flex;
+    height: 10vh;
+    border-radius: 10px;
+    padding-top: 17px;
+    background-color: #fff;
+    padding-left: 23px;
   }
-  .inputbox1{
-    margin-top: 22px;
-  }
-  .inputbox2{
-    margin-top: 15px;
-  }
-  input{
-    width: 40vw;
-    /* border-radius: 5px; */
-    height: 6vh;
-    margin-left: 1px;
-  }
-  #msg{
-    margin-top: 12px;
-    height: 9vh;
-    width: 81vw;
-  }
-  button{
-    width: 35vw;
-    /* margin-left: 7px; */
-    text-align: center;
-    margin-top: 15px;
-    font-weight: bold;
-    height: 6vh;
-    background-color: #edb218;
-    color: #fff;
-    border: none;
-  }
-  #contact{
-    margin-top: 12%;
-  }
-  .emailtext{
-    margin-left: 3%;
-    margin-top: -7%;
-  
-  }
-  .email{
-    margin-left: 3%;
-    margin-top: -7%;
-  }
-  #msgcon{
-    margin-top: -5%;
-  }
-  .portfolio-text{
-    text-align: center;
-    margin-top: 15%;
+  #ourteam{
+    margin-top: 52%;
   }
 }
 @media only screen and (max-width: 414px) {
   /* Styles for larger smartphones */
+  .header-logo{
+    padding-top: 7%;
+  }
   nav{
     display: none;
   }
@@ -4728,13 +4228,13 @@ button{
     text-align: center;
     border: 3px solid rgba(106, 106, 106,.3);
     width: 70%;
-    height: 60vh;
+    height: 40vh;
     margin-left: 14%;
     padding-top: 27%;
     
     -webkit-animation:  bounce-in-top 3.5s both;
     animation:  bounce-in-top 3.5s both;
-    margin-top: 16%;
+    margin-top: 26%;
     text-transform: uppercase;
 }
 .background-container{
@@ -4770,11 +4270,11 @@ button{
 .circle{
   border-radius: 50%;
   background-color: #edb218;
-  width: 8vw;
-  margin-left: 45%;
+  width: 15vw;
+  margin-left: 43%;
   margin-top: 2%;
-  padding-left: 3.5px;
-  padding-top: 4px;
+  padding-left: 18px;
+  padding-top: 14px;
 
   height: 6vh;
   
@@ -4884,7 +4384,7 @@ button{
 .banner{
   margin-top: 10%;
   position: relative;
-  height: 50vh;
+  height: 30vh;
   background: url("assest/Ardent5.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -4932,7 +4432,7 @@ button{
 .first-con{
   width: 80%;
   margin-left: 10%;
-  height: 55vh;
+  height: 43vh;
 }
 .brand-para{
   width: 65vw;
@@ -4944,10 +4444,10 @@ button{
   background-color: #edb218;
   color: #fff;
   border-radius: 50%;
-  width: 20vw;
-  height: 15vh;
-  margin-left: 38%;
-  padding-top: 7%;
+  width: 25vw;
+  height: 12vh;
+  margin-left: 33%;
+  padding-top: 9%;
   /* margin-top: 30px; */
 
 
@@ -4958,23 +4458,23 @@ display: none;
 .second-con{
   width: 80%;
   margin-left: 10%;
-  height: 55vh;
+  height: 43vh;
 
 }
 .circle2-con{
   /* background-color: #edb218; */
   color: #fff;
   border-radius: 50%;
-  width: 20vw;
-  height: 15vh;
-  margin-left: 38%;
-  padding-top: 6%;
+  width: 25vw;
+  height: 12vh;
+  margin-left: 33%;
+  padding-top: 9%;
   /* margin-top: 30px; */
 }
 .Third-con{
   width: 80%;
   margin-left: 10%;
-  height: 55vh;
+  height: 43vh;
 }
 .random{
   margin-top: 6%;
@@ -5069,7 +4569,7 @@ display: none;
   margin-top: 30%;
   background-color: #fff;
   padding-left: 13%;
-  padding-top: 18px;
+  padding-top: 65px;
   display: block;
   width: 100%;
   height: 32vh;
@@ -5092,7 +4592,7 @@ display: none;
 
 .progress{
   width: 70%;
-  margin-top: 35%;
+  margin-top: 40%;
   margin-left: -10%;
 }
 .graphics{
@@ -5102,7 +4602,7 @@ display: none;
 
 }
 #ourteam{
-  margin-top: 30%;
+  margin-top: 50%;
 }
 .graphico{
   margin-left: -101%;
@@ -5125,7 +4625,7 @@ display: none;
   border-radius: 50%;
   background-color: #ccc;
   width: 42%;
-  height: 18vh;
+  height: 10vh;
   margin-top: 5%;
 }
 .shortp{
@@ -5137,7 +4637,7 @@ display: none;
 }
 .teamcon1{
   margin-top: 6%;
-  margin-left: 4%;
+  margin-left: 2%;
 }
 .teampara{
   text-align: center;
@@ -5158,16 +4658,16 @@ display: none;
   margin-left: 10%;
   width: 73%;
   display: flex;
-  height: 12vh;
+  height: 10vh;
   border-radius: 10px;
-  padding-top: 10px;
+  padding-top: 17px;
   background-color: #fff;
   padding-left: 23px;
 }
 .callicon{
   border-radius: 50%;
-  width: 17%;
-  height: 9vh;
+  width: 20%;
+  height: 7vh;
   background-color: #edb218;
 }
 .phonetxt{
@@ -5175,17 +4675,17 @@ display: none;
 }
 svg{
   width: 50%;
-  margin-left: 12px;
-  margin-top: 8px;
+  margin-left: 15px;
+  margin-top: 10px;
 }
 .Email{
   margin-left: 10%;
   width: 73%;
   margin-top: 10px;
   display: flex;
-  height: 12vh;
+  height: 10vh;
   border-radius: 10px;
-  padding-top: 23px;
+  padding-top: 30px;
   background-color: #fff;
   padding-left: 23px;
 }
@@ -5196,7 +4696,7 @@ svg{
 }
 #formcontact{
   background-color: #fff;
-  height: 54vh;
+  height: 42vh;
   width: 90%;
   margin-left: 1%;
   margin-top: 12%;
@@ -5249,7 +4749,19 @@ button{
   margin-top: 15%;
 }
 }
-@media only screen and (max-width: 360px) {
+@media only screen and (max-width:414px) and (max-height: 736px) {
+  #ourteam{
+    margin-top: 70%;
+  }
+  .circleteam{
+    border-radius: 50%;
+    background-color: #ccc;
+    width: 40%;
+    height: 11vh;
+    margin-top: 4%;
+  }
+}
+@media only screen and (max-width: 360px){
   .header-logo{
     padding-top: 5%;
   }
@@ -5265,6 +4777,15 @@ button{
     animation:  bounce-in-top 3.5s both;
     margin-top: 30%;
     text-transform: uppercase;
+}
+#skills{
+  margin-top: 20%;
+  background-color: #fff;
+  padding-left: 13%;
+  padding-top: 40px;
+  display: block;
+  width: 100%;
+  height: 32vh;
 }
 .circle{
   border-radius: 50%;
@@ -5381,9 +4902,14 @@ display: none;
   margin-left: 3%;
   margin-top: -7%;
 }
+svg{
+  width: 50%;
+  margin-left: 13px;
+  margin-top: 10px;
+}
 .Email{
   margin-left: 5%;
-  width: 80%;
+  width: 85%;
   margin-top: 10px;
   display: flex;
   height: 10vh;
@@ -5394,7 +4920,7 @@ display: none;
 }
 .phonenumber{
   margin-left: 5%;
-  width: 80%;
+  width: 85%;
   display: flex;
   height: 10vh;
   border-radius: 10px;
@@ -5415,8 +4941,17 @@ display: none;
   height: 10vh;
   margin-top: 5%;
 }
+#ourteam{
+  margin-top: 70%;
 }
-@media only screen and (max-width:412px) {
+.callicon{
+  border-radius: 50%;
+  width: 17%;
+  height: 7vh;
+  background-color: #edb218;
+}
+}
+@media only screen and (min-width:412px) {
   .header-logo{
     padding-top: 5%;
   }
@@ -5537,7 +5072,7 @@ display: none;
   
 }
 .progress{
-  margin-top: 45%;
+  margin-top: 40%;
 }
 .skill{
   padding-top: 14%;
@@ -5572,6 +5107,15 @@ display: none;
   background-color: #fff;
   padding-left: 20px;
 }
+#skills{
+  margin-top: 20%;
+  background-color: #fff;
+  padding-left: 13%;
+  padding-top: 20px;
+  display: block;
+  width: 100%;
+  height: 32vh;
+}
 .callicon{
   border-radius: 50%;
   width: 17%;
@@ -5598,7 +5142,7 @@ svg{
   margin-top: 12%;
 }
 }
-@media only screen and (max-width:430px) {
+@media only screen and (min-width:430px) {
   .header-logo{
     padding-top: 5%;
   }
@@ -5648,6 +5192,15 @@ svg{
   width: 100%;
   
 }
+.text-para{
+  width: 80%;
+  color: rgb(226, 226, 226);
+  text-align: center;
+  font-size: 18px;
+  margin-top: 15px;
+  margin-left: 9%;
+  font-weight: 300;
+}
 .first-con{
   width: 80%;
   margin-left: 10%;
@@ -5673,6 +5226,14 @@ display: none;
   margin-left: 10%;
   height: 40vh;
 
+}  .ul{
+  display: flex;
+  text-decoration: none;
+  margin-top: 7%;
+  width: 50vw;
+  text-align: center;
+  margin-left: 14%;
+  justify-content: space-evenly;
 }
 .circle2-con{
   /* background-color: #edb218; */
@@ -5698,7 +5259,7 @@ display: none;
   margin-top: 3%;
   padding-top: 3%;
   display: grid;
-  margin-left: -3%;
+  margin-left: -2%;
   grid-template-columns: repeat(2, 1fr); /* 2 columns with equal width */
   grid-template-rows: repeat(2, 1fr);    /* 2 rows with equal height */
   gap: 35px; /* Optional: Adds space between grid items */
@@ -5729,10 +5290,10 @@ display: none;
   
 }
 .progress{
-  margin-top: 35%;
+  margin-top: 45%;
 }
 .skill{
-  padding-top: 14%;
+  padding-top: 5%;
 }
 .emailtext{
   margin-left: 3%;
@@ -5760,7 +5321,7 @@ display: none;
   display: flex;
   height: 10vh;
   border-radius: 10px;
-  padding-top: 20px;
+  padding-top: 15px;
   background-color: #fff;
   padding-left: 20px;
 }
@@ -5773,7 +5334,7 @@ display: none;
 .circleteam{
   border-radius: 50%;
   background-color: #ccc;
-  width: 85%;
+  width: 75%;
   height: 13vh;
   margin-top: 7%;
 }
@@ -5830,7 +5391,7 @@ svg{
   margin-top: 20%;
   background-color: #fff;
   padding-left: 13%;
-  padding-top: 18px;
+  padding-top: 45px;
   display: block;
   width: 100%;
   height: 32vh;
