--- a/style.css
+++ b/style.css
@@ -39,6 +39,9 @@ h3{
 
    
 }
+.img{
+    width: 10vw;
+}
 span{
     color: #fff;
     margin-top: 9%;
@@ -76,4 +79,110 @@ a{
     }
 
 
+}
+@media screen and (max-width: 1440px) {
+    .container{
+        margin-top: 20%;
+        text-align: center;
+    }
+}
+@media screen and (max-width: 1280px) {
+    #arrow{
+        color: #fff;
+    }
+  
+     .text-typing{
+        width: 18%;
+     }
+}
+@media screen and (max-width: 1000px) {
+    #arrow{
+        color: #fff;
+    }
+    .container{
+        text-align: center;
+    }
+     .text-typing{
+        width: 23%;
+     }
+}
+@media screen and (max-width: 414px) {
+    .progress-bar {
+        height: 100%; /* Fills the container height */
+        background-color: #edb218; /* Adjust color as desired */
+        animation: progress-fill 5s ease-in-out forwards; 
+        border-radius: 5px;
+      }
+      .progress-container{
+        width: 300px; /* Adjust width as needed */
+        height: 4px;
+        margin-top: 1%;
+        background-color: #ddd;
+        margin-left: 40%;
+        border-radius: 5px;
+    }
+    .container{
+        text-align: center;
+        margin-top: 90%;
+        margin-left: -45%;
+    }
+    .text-typing{
+        width: 38%;
+        margin-left: 45%;
+     }
+     .img{
+        width: 38vw;
+        margin-left: 28%;
+     }
+}
+@media screen and (max-width: 430px) {
+    .progress-bar {
+        height: 100%; /* Fills the container height */
+        background-color: #edb218; /* Adjust color as desired */
+        animation: progress-fill 5s ease-in-out forwards; 
+        border-radius: 5px;
+      }
+      .progress-container{
+        width: 300px; /* Adjust width as needed */
+        height: 4px;
+        margin-top: 1%;
+        background-color: #ddd;
+        margin-left: 40%;
+        border-radius: 5px;
+    }
+    .container{
+        text-align: center;
+        margin-top: 90%;
+        margin-left: -45%;
+    }
+    .text-typing{
+        width: 38%;
+        margin-left: 45%;
+     }
+     .img{
+        width: 38vw;
+        margin-left: 28%;
+     }
+}
+@media screen and (max-width: 375px) {
+    .container{
+        margin-top: 80%;
+        margin-left: -54%;
+
+    }
+    .text-typing{
+        width: 40%;
+        margin-left: 45%;
+     }
+}
+@media screen and (max-width: 360px) {
+    .container{
+        margin-top: 90%;
+        margin-left: -54%;
+
+    }
+    .text-typing{
+        width: 42%;
+        margin-left: 45%;
+     }
 }
