--- a/style.css
+++ b/style.css
@@ -85,6 +85,13 @@ a{
         margin-top: 20%;
         text-align: center;
     }
+    .text-typing{
+        width: 18%;
+        
+     }
+     .img{
+        margin-left: 6%;
+     }
 }
 @media screen and (max-width: 1280px) {
     #arrow{
@@ -94,7 +101,33 @@ a{
      .text-typing{
         width: 18%;
      }
+     .img{
+        /* width: 38vw; */
+        margin-left: 2%;
+     }
 }
+@media screen and (max-width: 1024px) {
+    #arrow{
+        color: #fff;
+    }
+  
+     .text-typing{
+        width: 20%;
+        /* margin-left: 1px; */
+
+     }
+     .img{
+        /* width: 38vw; */
+        margin-left: 6%;
+     }
+     .container{
+        text-align: center;
+        margin-top: 30%;
+        margin-left: -10%;
+    }
+}
+
+
 @media screen and (max-width: 1000px) {
     #arrow{
         color: #fff;
@@ -184,5 +217,51 @@ a{
     .text-typing{
         width: 42%;
         margin-left: 45%;
+     }
+}
+@media screen and (max-width: 768px) {
+    .text-typing{
+        width: 25%;
+        /* font-size: 12px; */
+    }
+    .container{
+        /* margin-top: 90%; */
+        margin-left: -15%;
+
+    }
+    .img{
+        /* width: 38vw; */
+        margin-left: 12%;
+     }
+}
+@media screen and (max-width: 800px) {
+    .text-typing{
+        width: 25%;
+        /* font-size: 12px; */
+    }
+    .container{
+        /* margin-top: 90%; */
+        margin-left: -15%;
+
+    }
+    .img{
+        /* width: 38vw; */
+        margin-left: 12%;
+     }
+}
+@media screen and (max-width: 700px) {
+    .text-typing{
+        width: 28%;
+        margin-left: 45%;
+        /* font-size: 12px; */
+    }
+    .container{
+        /* margin-top: 90%; */
+        margin-left: -15%;
+
+    }
+    .img{
+        /* width: 38vw; */
+        margin-left: 12%;
      }
 }
